[package]
name = "skyrim-search-se"
version = "0.7.0"
authors = ["qbx2 <sunyeop97@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
clap = "2"
detour = { version = "0.8", default-features = false }
late-static = "0.4"
lazy_static = "1"
prettytable-rs = "0.10.0"
region = "2"
rusqlite = { version = "0.24", features = ["bundled"] }
shlex = "1"
versionlib-macro = { path = "versionlib-macro" }
win_dbg_logger = "0.1"
winapi = { version = "0.3", features = ["libloaderapi", "shlobj", "minwindef", "ntdef", "errhandlingapi", "winerror", "winuser"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
